--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<div class="container">
 			<div class="clickarea">
 				<p class="message">Reaction Time Test</p>
+				<p class="note">When the red box turns green, click as quickly as you can.<br/>Click anywhere to start.</p>
 			</div>
 		</div>
 	</body>
